# ardupilot

ArduCopter/: APM_Config.h  Copter.cpp  Copter.h  Parameters.cpp  RC_Channel.h  UserCode.cpp  config.h  defines.h  mode.cpp  mode.h  mode_fixed_test_trajectory.cpp  mode_fixed_test_trajectory_data.txt  system.cpp  tuning.cpp  wscript
ArduCopter/parameters_backup/: 2021_02_28.param
debug/: CMakeLists.txt  main.cpp
libraries/AC_AttitudeControl/: AC_AttitudeControl_GPC.cpp  AC_AttitudeControl_GPC.h  AC_AttitudeControl_GPC_defines.h  AC_AttitudeControl_Multi.cpp  AC_AttitudeControl_Multi.h  AC_GPC_Helpers.cpp  AC_GPC_Helpers.h  AC_GPC_LinearModels.cpp  AC_GPC_LinearModels.h  AC_debug.h
libraries/AP_HAL_ChibiOS/hwdef/scripts/: STM32F745xx.py  chibios_hwdef.py
libraries/AP_Logger/: AP_Logger.h  LogFile.cpp  LogStructure.h
libraries/AP_Math/: AP_Math.h  circular_buffer.cpp  circular_buffer.h  matrixNxM.cpp  matrixNxM.h  vector3.h
